added wordle category animation and basic project structure

--- a/client/src/styles/navbar.scss
+++ b/client/src/styles/navbar.scss
@@ -23,8 +23,11 @@ $navMargin: 5px;
 }
 
 .nav-logo {
+    margin-left: 10px;
     margin-right: auto;
     font-size: large;
+    width: 100px;
+    height: 50px;
 }
 
 .neonText {
