--- a/client/src/styles/tictactoe.scss
+++ b/client/src/styles/tictactoe.scss
@@ -1,1 +1,21 @@
 @use 'colors';
+
+.tic-square {
+    width: 50px;
+    height: 50px;
+    background-color: azure;
+    border: 2px solid colors.$primary-blue;
+    margin: 2px;
+    overflow: hidden;
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    font-weight: 600;
+}
+
+.buttons-row {
+    overflow: hidden;
+    display: inline-block;
+}
